--- a/Brewery-Tracker/Brewery-Tracker/Brewery-Tracker.csproj
+++ b/Brewery-Tracker/Brewery-Tracker/Brewery-Tracker.csproj
@@ -257,6 +257,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Signup.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Breweries.cshtml" />
+    <Content Include="Views\Home\Beers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
