--- a/Brewery-Tracker/Brewery-Tracker/Brewery-Tracker.csproj
+++ b/Brewery-Tracker/Brewery-Tracker/Brewery-Tracker.csproj
@@ -289,7 +289,9 @@
     <Content Include="Views\Beers\ListOfBeers.cshtml" />
     <Content Include="Views\Beers\Details.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Content\Images\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
