--- a/Brewery-Tracker/Brewery-Tracker/Web.config
+++ b/Brewery-Tracker/Brewery-Tracker/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,7 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Brewery-Tracker.mdf;Initial Catalog=aspnet-Brewery-Tracker-20180115092157;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Brewery-Tracker.mdf;Initial Catalog=aspnet-Brewery-Tracker-20180115092157;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="Brewery_TrackerContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Brewery_TrackerContext-20180305192056; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Brewery_TrackerContext-20180305192056.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="Brewery_TrackContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=Brewery_TrackContext-20180305192436; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|Brewery_TrackContext-20180305192436.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
