--- a/Brewery-Tracker/Brewery-Tracker/Brewery-Tracker.csproj
+++ b/Brewery-Tracker/Brewery-Tracker/Brewery-Tracker.csproj
@@ -231,6 +231,7 @@
       <DependentUpon>Brewery-Tracker.mdf</DependentUpon>
     </Content>
     <Content Include="Content\bulma.min.css" />
+    <Content Include="Content\Images\sipofsunshine.jpg" />
     <Content Include="Content\main.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -308,9 +309,7 @@
     <Content Include="Views\Beers1\Edit.cshtml" />
     <Content Include="Views\Beers1\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\Images\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
